force-app/main/default/objects/Visa__c/fields/Ammount_paid_c__c.field-meta.xml
<CustomField>
    <fullName>Ammount_paid_c__c</fullName>
    <label>Ammount paid c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>