force-app/main/default/objects/Visa__c/fields/passport__c.field-meta.xml
<CustomField>
    <fullName>passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport</label>
    <referenceTo>Passport__c</referenceTo>
    <relationshipLabel>Visa</relationshipLabel>
    <relationshipName>Visa</relationshipName>
    <type>Lookup</type>
</CustomField>