force-app/main/default/objects/Visa__c/fields/Visa_free__c.field-meta.xml
<CustomField>
    <fullName>Visa_free__c</fullName>
    <label>Visa free</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>